## Use compiler debugging flags per default
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Wextra -Wpedantic")

## Creating Binaries for each *.cxx file
SET(PROJECT_LIBS ${Boost_LIBRARIES})
SET(PROJECT_BIN ${PROJECT_NAME})
ADD_EXECUTABLE(${PROJECT_BIN} ${MAINFOLDER}/src/main.cxx ${PROJECT_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_BIN} ${PROJECT_LIBS})
INSTALL(TARGETS ${PROJECT_BIN} DESTINATION bin)
